# log_library

./: .gitignore  .gitmodules  CMakeLists.txt
cmake/: CheckCXX11Features.cmake  FindGLEW.cmake  FindGLFW.cmake  FindGLM.cmake  README.md  dist.cmake  utils.cmake
examples/: CMakeLists.txt  main.cpp
